[package]
name = "cherry-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
primitive-types = "^0.7.3"
uint = { version = "0.8.3", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_chacha = "0.3.1"